Fix slider knob alignment

--- a/source/stylesheets/components/_slider.scss
+++ b/source/stylesheets/components/_slider.scss
@@ -16,6 +16,7 @@ jd-slider {
   .scale {
     display: flex;
     gap: .25rem;
+    padding: 0 .125rem;
     height: .625rem;
 
     &>div {
